<resources>
    <string name="app_name">NONS Skuyy</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_description">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="presale">Pre Sale</string>
    <string name="presale_description">My Bre And My sis tidak perlu\nkhawatir ketinggalan film terbaru</string>
    <string name="cashlees">Cashlees</string>
    <string name="cashlees_description">Permudah Pembayaran Dengan\nMenggunakan e-wallet
    </string>
    <string name="sign_in">Sign In</string>
    <string name="usernme">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email Adress</string>
    <string name="photo">Photo</string>
    <string name="welcome_downy">Welcome,\nDowny Uwu-Uwu</string>
    <string name="simpan_dan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="yang_akan_datang">Yang Akan Datang</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket(2)</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="waktu_bayar">Waktu Bayar</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">BATALKAN</string>
    <string name="tglandwakt"><![CDATA[Tanggal & Waktu]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="idr_300k">IDR 300K</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="riwayat">Riwayat Transaksi</string>
    <string name="my_wallet">My Wallet</string>
    <string name="history">History</string>
</resources>